--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-firebase/app": "^14.11.0",
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5"
   },
